fieldtypes project: new database field-types
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11508 91430c5f-d668-0410-9e7d-dd663366dcfd